k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: northamerica-northeast2-docker.pkg.dev/ferrous-iridium-415220/charlie-cohere-test/frontend:latest
        ports:
        - name: http
          containerPort: 3000
