k8s/postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: northamerica-northeast2-docker.pkg.dev/ferrous-iridium-415220/charlie-cohere-test/database:latest
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: pv-data
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: pv-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  type: NodePort
  selector:
    app: postgres
